fixing jump

--- a/style.css
+++ b/style.css
@@ -18,7 +18,6 @@
 	background-color: red;
 	position: relative;
 	top: 150px;
-	animation: jump 500ms;
 }
 
 @keyframes jump
